cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(cplusplus VERSION 1.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(AllocatingMemory "./Allocating Memory/src/Allocating Memory.cpp")
add_executable(Arrays "./Arrays/src/Arrays.cpp")
add_executable(ArraysFunctions "./Arrays and Functions/src/Arrays and Functions.cpp")
add_executable(BreakContinue "./break-continue/src/break-continue.cpp")
add_executable(CharArrays "./Char Arrays/src/Char Arrays.cpp")
add_executable(Classes "./Classes/src/Cat.cpp" "./Classes/src/Classes.cpp")
add_executable(ComparingFloats "./Comparing Floats/src/Comparing Floats.cpp")
add_executable(Const "./Const/src/Const.cpp")
add_executable(ConstructorInitialization 
  "./Constructor Initialization List/src/Person.cpp" 
  "./Constructor Initialization List/src/This.cpp")
add_executable(ConstructorParameters 
  "./Constructor Parameters and Overloading/src/Constructor Parameters and Overloading.cpp" 
  "./Constructor Parameters and Overloading/src/Person.cpp")
add_executable(ConstructorDestructor 
  "./Constructors and Destructors/src/Cat.cpp" 
  "./Constructors and Destructors/src/Constructors and Destructors.cpp")
add_executable(CopyConstructor "./Copy Constructors/src/Copy Constructors.cpp")
add_executable(DataMembers2 "./Data Members 2/src/Cat.cpp" "./Data Members 2/src/Data Members 2.cpp")
add_executable(DoWhile "./do-while/src/do-while.cpp")
add_executable(Encapsulation "./Encapsulation/src/Encapsulation.cpp")
add_executable(FloatingPointType "./Floating Point Types/src/Floating Point Types.cpp")
add_executable(For "./for/src/for.cpp")
add_executable(FunctionParams "./function parameters/src/functions.cpp")
add_executable(Functions "./functions/src/functions.cpp")
add_executable(GetterSetter "./Getters and Setters/src/Getters and Setters.cpp" "./Getters and Setters/src/Person.cpp")
add_executable(HelloWorld "./Hello World/src/Hello World.cpp")
add_executable(If "./if/src/if.cpp")
add_executable(IfElse "./if-else/src/if-else.cpp")
add_executable(IfElseIf "./if-elseif/src/if-else.cpp")
add_executable(Inheritance "./Inheritance/src/Inheritance.cpp")
add_executable(InhertitanceConstruction "./Inheritance and Construction/src/Inheritance and Construction.cpp")
add_executable(Input "./Input/src/Input.cpp")
add_executable(IntegerTypes "./Integer Types/src/Integer Types.cpp")
add_executable(MinMax "./Min and Max/src/Min and Max.cpp")
add_executable(MultidimensionalArrays "./multidimensional-arrays/src/multidimensional-arrays.cpp")
add_executable(MultipleParams "./multiple parameters/src/functions.cpp")
add_executable(Namespaces "./Namespaces/src/Animals.cpp" "./Namespaces/src/Cat.cpp" "./Namespaces/src/Namespaces.cpp")
add_executable(NewOperator "./New Operator/src/New Operator.cpp")
add_executable(OtherTypes "./Other Types/src/Other Types.cpp")
add_executable(OutputtingText "./Outputting Text/src/Outputting Text.cpp")
add_executable(Overriding "./Overriding/src/Overriding.cpp")
add_executable(PointerArithmetic "./Pointer Arithmetic/src/Pointer Arithmetic.cpp")
add_executable(Pointers "./Pointers/src/Pointers.cpp")
add_executable(PointersArrays "./Pointers and Arrays/src/Pointers and Arrays.cpp")
add_executable(Polymorphism "./Polymorphism/src/Polymorphism.cpp")
add_executable(PostfixPrefix "./Postfix and Prefix/src/Postfix and Prefix.cpp")
add_executable(PrototypesIncludes "./Prototypes and Includes/src/Prototypes and Includes.cpp")
add_executable(PublicPrivateProtected "./Public, Private, Protected/src/Inheritance.cpp")
add_executable(References "./References/src/References.cpp")
add_executable(ReturningObjects "./Returning Objects from Methods/src/New Operator.cpp")
add_executable(ReturningValues "./Returning values from functions/src/functions.cpp")
add_executable(ReverseString "./Reversing a String/src/Reversing a String.cpp")
add_executable(Sizeof "./sizeof/src/sizeof.cpp")
add_executable(SizeofMultidimArray "./Sizeof Multidimensional Arrays/src/Sizeof Multidimensional Arrays.cpp")
add_executable(Static "./Static/src/Static.cpp")
add_executable(StringStreams "./String Streams/src/String Streams.cpp")
add_executable(Strings "./Strings/src/Strings.cpp")
add_executable(Switch "./switch/src/switch.cpp")
add_executable(TernaryOperator "./Ternary Operator/src/Ternary Operator.cpp")
add_executable(This "./This/src/Main.cpp" "./This/src/Person.cpp")
add_executable(TwosComplement "./Twos Complement/src/Twos Complement.cpp")
add_executable(Variables "./Variables/src/Variables.cpp")
add_executable(While "./while/src/while.cpp")

#add_executable(./Writing Pixels/src/main.cpp)
#add_executable(./Adding a SetPixel Method/src/main.cpp)
#add_executable(./Adding a SetPixel Method/src/Screen.cpp)
##add_executable(./Animating Colors/src/main.cpp)
##add_executable(./Animating Colors/src/Screen.cpp)
##add_executable(./Animating Particles/src/main.cpp)
##add_executable(./Animating Particles/src/Particle.cpp)
##add_executable(./Animating Particles/src/Screen.cpp)
##add_executable(./Animating Particles/src/Swarm.cpp)
#add_executable(./Arithmetic/src/Arithmetic.cpp)
#add_executable(./Binary And and Right Bitshift/src/Logical And and Right Bitshift.cpp)
#add_executable(./Bit Shifting/src/Bit Shifting.cpp)
##add_executable(./Blurring the Screen/src/main.cpp)
##add_executable(./Blurring the Screen/src/Particle.cpp)
##add_executable(./Blurring the Screen/src/Screen.cpp)
##add_executable(./Blurring the Screen/src/Swarm.cpp)
##add_executable(./Constant Speed in Games/src/main.cpp)
##add_executable(./Constant Speed in Games/src/Particle.cpp)
##add_executable(./Constant Speed in Games/src/Screen.cpp)
##add_executable(./Constant Speed in Games/src/Swarm.cpp)
#add_executable(./Creating Particles/src/main.cpp)
#add_executable(./Creating Particles/src/Particle.cpp)
#add_executable(./Creating Particles/src/Screen.cpp)
#add_executable(./Creating Particles/src/Swarm.cpp)
#add_executable(./Creating the Screen Object/src/main.cpp)
#add_executable(./Creating the Screen Object/src/Screen.cpp)
#add_executable(./Enabling Pixel Access/src/main.cpp)
#add_executable(./Particle Motion/src/main.cpp)
#add_executable(./Particle Motion/src/Particle.cpp)
#add_executable(./Particle Motion/src/Screen.cpp)
#add_executable(./Particle Motion/src/Swarm.cpp)
